Correction of close hamburger system on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1517,7 +1517,7 @@ ol {
 
 @media (max-width: 767px) {
   .header {
-    padding: 18px 0 !important;
+    padding: 8px 0 !important;
   }
   .header .mobile-menu-btn .toggler-icon {
     background-color: #fff;
@@ -1633,14 +1633,21 @@ ol {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header .navbar-brand img {
-    width: 170px;
+    width: 160px;
+    transition: all 0.3s ease;
   }
 }
 
 @media (max-width: 767px) {
   .header .navbar-brand img {
-    width: 160px;
+    width: 100px;
   }
+
+  .navbar-brand {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
 }
 
 .header.sticky .navbar-brand .white-logo {
